adding a css file to my repo

--- a/index.html
+++ b/index.html
@@ -5,16 +5,22 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,  initial-scale=1.0" />
         <title>Composition about myself</title>
+        <style>h3{
+            color: brown;
+        }
+            </style>
+        <link rel="stylesheet" href="style.css" >
+        
 
     </head>
     <body>
         <div> 
             <h1>my name is <strong>Oluwatobi </strong> Abdulhakeem Balogun</h1>
-            <h2>im based in <del>abuja</del> lagos</h2>
+            <h2 class="stop" >im based in <del>abuja</del> lagos</h2>
             <h4>i was born on the 4<sup>th</sup> of december</h4>
             <h3>i love playing games</h3>
-            <h4>i love playing <i>call</i> of duty mobile</h4>
-            <h6>i am a fair guy</h6>
+            <h4 style="color:sienna ;">i love playing <i>call</i> of duty mobile</h4>
+            <h6 id="power" >i am a fair guy</h6>
             <h6>i love H<sub>2</sub>0</h6>
             <p>i also love football and support <b>manchester united</b> football club <sub>fc</sub>  which is based in england.</p> 
         </div>
